<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeLanguageActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ivory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lang_change_kr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_language_kr"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lang_change_foreign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/change_language_en"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/unite_states_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/united_states_icon"
        app:layout_constraintEnd_toStartOf="@+id/china_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/english_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/english"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/unite_states_iv"
        app:layout_constraintStart_toStartOf="@id/unite_states_iv"
        app:layout_constraintTop_toBottomOf="@+id/unite_states_iv" />

    <ImageView
        android:id="@+id/china_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/china_icon"
        app:layout_constraintBottom_toBottomOf="@+id/unite_states_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/unite_states_iv"
        app:layout_constraintTop_toTopOf="@+id/unite_states_iv" />

    <TextView
        android:id="@+id/chinese_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chinese_cn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/china_iv"
        app:layout_constraintStart_toStartOf="@id/china_iv"
        app:layout_constraintTop_toBottomOf="@+id/china_iv" />

    <ImageView
        android:id="@+id/vietnam_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/vietnam_icon"
        app:layout_constraintEnd_toStartOf="@+id/japan_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/unite_states_iv" />

    <TextView
        android:id="@+id/vietnam_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vietnam_vn"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/vietnam_iv"
        app:layout_constraintStart_toStartOf="@id/vietnam_iv"
        app:layout_constraintTop_toBottomOf="@+id/vietnam_iv" />

    <ImageView
        android:id="@+id/japan_iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/japan_icon"
        app:layout_constraintBottom_toBottomOf="@+id/vietnam_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vietnam_iv"
        app:layout_constraintTop_toTopOf="@+id/vietnam_iv" />

    <TextView
        android:id="@+id/japan_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/japan_jp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/japan_iv"
        app:layout_constraintStart_toStartOf="@id/japan_iv"
        app:layout_constraintTop_toBottomOf="@+id/japan_iv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting_up_btn"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_shape"
        android:text="@string/setting_up"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>