<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#D9D9D9"
    android:paddingHorizontal="24dp"
    android:paddingBottom="48dp">

    <TextView
        android:id="@+id/alert_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/take_photo_alert_kr"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alert_other_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/take_photo_alert_en"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_tv" />

    <ImageView
        android:id="@+id/exit_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/object_recognition_view"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/main_activity_view"
        app:layout_constraintEnd_toStartOf="@+id/text_recognition_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_other_language_tv" />

    <ImageView
        android:id="@+id/object_recognition_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/object_icon"
        app:layout_constraintEnd_toEndOf="@+id/object_recognition_view"
        app:layout_constraintStart_toStartOf="@+id/object_recognition_view"
        app:layout_constraintTop_toTopOf="@+id/object_recognition_view" />

    <TextView
        android:id="@+id/voca_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/object_recognition_kr"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/object_recognition_other_language_tv"
        app:layout_constraintEnd_toEndOf="@+id/object_recognition_view"
        app:layout_constraintStart_toStartOf="@+id/object_recognition_view"
        app:layout_constraintTop_toBottomOf="@+id/object_recognition_iv"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/object_recognition_other_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:text="@string/object_recognition_en"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/object_recognition_view"
        app:layout_constraintEnd_toEndOf="@+id/voca_tv"
        app:layout_constraintStart_toStartOf="@+id/voca_tv"
        app:layout_constraintTop_toBottomOf="@+id/voca_tv" />

    <View
        android:id="@+id/text_recognition_view"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/main_activity_view"
        app:layout_constraintBottom_toBottomOf="@+id/object_recognition_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/object_recognition_view"
        app:layout_constraintTop_toTopOf="@+id/object_recognition_view" />

    <ImageView
        android:id="@+id/text_recognition_iv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_text"
        app:layout_constraintEnd_toEndOf="@+id/text_recognition_view"
        app:layout_constraintStart_toStartOf="@+id/text_recognition_view"
        app:layout_constraintTop_toTopOf="@+id/text_recognition_view" />

    <TextView
        android:id="@+id/setting_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_recognition_kr"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_recognition_other_language_tv"
        app:layout_constraintEnd_toEndOf="@+id/text_recognition_view"
        app:layout_constraintStart_toStartOf="@+id/text_recognition_view"
        app:layout_constraintTop_toBottomOf="@+id/text_recognition_iv"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_recognition_other_language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:gravity="center"
        android:text="@string/text_recognition_en"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_recognition_view"
        app:layout_constraintEnd_toEndOf="@+id/setting_tv"
        app:layout_constraintStart_toStartOf="@+id/setting_tv"
        app:layout_constraintTop_toBottomOf="@+id/setting_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>